--- a/library-app/src/main/resources/application.yml
+++ b/library-app/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     cassandra:
       contact-points: localhost
       port: 9042
+      local-datacenter: datacenter1
+      keyspace-name: sandbox
   main:
     allow-circular-references: true
 
