--- a/library-app/pom.xml
+++ b/library-app/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-cassandra</artifactId>
+            <version>3.4.3</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
